AMBARI-10564. Combobox widget layout issues (onechiporenko)

--- a/ambari-web/app/styles/widgets.less
+++ b/ambari-web/app/styles/widgets.less
@@ -319,6 +319,11 @@
         border-radius: 0 3px 3px 0;
       }
     }
+
+    ul.dropdown-menu {
+      z-index: 1100; // menu-items shouldn't be under popover
+    }
+
   }
 
   .action-button {
